[package]
name = "niropok-pq-sidechain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = {version = "1.0", features =["derive"]}
crystals-dilithium = "1.0.0"
chrono = "0.4"
rand = "0.8.5"
hex = "0.4"
libp2p = { version = "0.51", features = ["full", "tokio", "mdns"] }
tokio = { version = "1.28", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
once_cell = "1.5"
log = "0.4"
serde_json = "1.0"
pretty_env_logger = "0.5"
periodic = "0.1.1"
futures = "0.3"
sha3 = "0.10.8"
rs_merkle = "1.4.2"
