[package]
default-run = "niropok-pq-sidechain"
name = "niropok-pq-sidechain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = {version = "1.0", features =["derive"]}
serde_bytes = "0.11"
crystals-dilithium = "1.0.0"
chrono = "0.4"
rand = { version = "0.8.5", features = ["std_rng"] }
hex = "0.4"
libp2p = { version = "0.52", features = ["full", "tokio", "mdns", "gossipsub"] }
tokio = { version = "1.28", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
once_cell = "1.5"
log = "0.4"
serde_json = "1.0"
pretty_env_logger = "0.5"
periodic = "0.1.1"
futures = "0.3"
sha3 = "0.10"
rs_merkle = "1.4.2"
bincode = "1.3"
colored = "2.0"
rayon = "1.5"
crypto-common = "0.1"
expander_compiler = { path = "./ExpanderCompilerCollection/expander_compiler" }
warp = "0.3.7"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "send_transaction"
path = "src/bin/send_transaction.rs"
